updated links in Detroit River location file

--- a/location_files/detroit_river/steps/custom/html/custom.html
+++ b/location_files/detroit_river/steps/custom/html/custom.html
@@ -53,7 +53,7 @@
 
     <div class="form-group height hide">
         <div class="col-sm-8 col-sm-offset-4">
-            <a href="http://www.lre.usace.army.mil/Missions/GreatLakesInformation/GreatLakesWaterLevels/CurrentConditions.aspx" target="_blank">Stage Height Information</a>
+            <a href="https://lre-wm.usace.army.mil/reports/detroitRiver/detroitRiverHourlyLevels/detroitRiverHourlyLevels.html" target="_blank">Stage Height Information</a>
         </div>
     </div>
 
